# pretix-voucher-statistics

./: Dockerfile.dev  MANIFEST.in  README.md  docker-compose.yml  pretix.cfg  setup.cfg
pretix_voucher_statistics/: __init__.py  apps.py  signals.py  urls.py  views.py
pretix_voucher_statistics/static/pretix_voucher_statistics/js/: org_statistics.js  voucher_detail.js
pretix_voucher_statistics/templates/pretix_voucher_statistics/: org_statistics.html  voucher_detail.html  voucher_list.html
