[metadata]
name = pretix-voucher-statistics
version = 1.0.0
description = Voucher statistics and analytics for pretix
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/pretix-voucher-statistics
author = Your Name
author_email = your@email.com
license = Apache Software License
license_files = LICENSE
classifiers =
    Environment :: Plugins
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Framework :: Django
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pretix>=2026.1.1

[options.entry_points]
pretix.plugin =
    pretix_voucher_statistics = pretix_voucher_statistics:PluginApp

[options.packages.find]
exclude =
    tests
    tests.*
